# vision-pose-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/workflows/: build-project.yaml  push.yaml
cmake/: ObsPluginHelpers.cmake
cmake/common/: compiler_common.cmake
cmake/linux/: compilerconfig.cmake
cmake/macos/: compilerconfig.cmake
data/: vision-pose-overlay.html
src/: VisionProcessor.h  VisionProcessor.mm  vision-pose-plugin.cpp
